--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.4.2",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "typescript": "^4.1.5"
   },
   "devDependencies": {
     "@types/express": "4.17.3",
@@ -41,7 +42,6 @@
     "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
     "ts-node": "3.3.0",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
